# C-_static_shared_libs_cmake

./: Commands_line.txt  README.md
1_single_maincpp_compilation/: CMakeLists.txt
1_single_maincpp_compilation/src/: client.cpp  client.h  main.cpp
2_multiple_cpp_with_header_files/: CMakeLists.txt
2_multiple_cpp_with_header_files/src/: User.cpp  main.cpp
4_static_library/: CMakeLists.txt
4_static_library/include/: User.h
